log
Fri 09 Sep 2022 12:36:58 PM UTC: 
 tests:  0|6
total_score: 0/70
bca7b4b
Fri 09 Sep 2022 12:40:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createPair’:
hashmap.c:21:4: error: implicit declaration of function ‘assert’ [-Werror=implicit-function-declaration]
   21 |    assert(new != NULL);
      |    ^~~~~~
hashmap.c:7:1: note: ‘assert’ is defined in header ‘<assert.h>’; did you forget to ‘#include <assert.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <assert.h>
    7 | 
cc1: all warnings being treated as errors
Compilation failed
ad6de9b
Fri 09 Sep 2022 12:40:30 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
73cdd50
Fri 09 Sep 2022 12:44:05 PM UTC: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   58 |     new->key = key;
      |        ^~
hashmap.c:58:16: error: ‘key’ undeclared (first use in this function)
   58 |     new->key = key;
      |                ^~~
hashmap.c:58:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   59 |     new->value = value;
      |        ^~
hashmap.c:59:18: error: ‘value’ undeclared (first use in this function)
   59 |     new->value = value;
      |                  ^~~~~
Compilation failed
571efed
Fri 09 Sep 2022 12:44:47 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   58 |     new->key = NULL;
      |        ^~
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
   59 |     new->value = NULL;
      |        ^~
Compilation failed
6a690a8
Fri 09 Sep 2022 12:47:42 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
b594f2b
